[workspace]

members = [
  "abstio",
  "abstutil",
  "apps/*",
  "cli",
  "collisions",
  "convert_osm",
  "geom",
  "headless",
  "importer",
  "kml",
  "map_gui",
  "map_model",
  "piggyback",
  "popdat",
  "raw_map",
  "sim",
  "synthpop",
  "tests",
  "traffic_seitan",
  "traffic_signal_data",
  "updater",
  "widgetry",
  "widgetry_demo",
]

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies as release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3

# There's a circular dependency between this repo (abstreet) and osm2streets,
# due to the 2 core dependency crates listed below. This patch is required to
# avoid Cargo from getting confused.
[patch."https://github.com/a-b-street/abstreet/"]
geom = { path = "geom" }
abstutil = { path = "abstutil" }

[patch.crates-io]
# avoid duplicating geo dependency, until next polylabel release
polylabel = { git = "https://github.com/urschrei/polylabel-rs", rev = "b919b8587b491b9a952a6d4c0670558bfd38e034" }
http-range-client = { git = "https://github.com/pka/http-range-client", rev = "e62f72ab3553a19f4166f73efd18b13b4c4164ec" }

# awaiting release to avoid duplicated geojson dep
geozero = { git = "https://github.com/georust/geozero", rev = "0c3d6209eea8aa37bd42e9e784b92f2087e7efb4" }

# To temporarily work on dependencies locally, uncomment this
# TODO Do not commit. Update each repo
#[patch."https://github.com/a-b-street/osm2streets"]
#import_streets = { path = "/home/dabreegster/osm2streets/import_streets" }
#street_network = { path = "/home/dabreegster/osm2streets/street_network" }
