[workspace]

members = [
  "abstio",
  "abstutil",
  "apps/*",
  "blockfinding",
  "cli",
  "collisions",
  "convert_osm",
  "geom",
  "headless",
  "importer",
  "kml",
  "map_gui",
  "map_model",
  "piggyback",
  "popdat",
  "raw_map",
  "sim",
  "synthpop",
  "tests",
  "traffic_seitan",
  "traffic_signal_data",
  "updater",
  "widgetry",
  "widgetry_demo",
]

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies as release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3

# Specify the versions for common dependencies just once here, instead of
# repeating in a bunch of crates
[workspace.dependencies]
anyhow = "1.0.38"
bincode = "1.3.1"
colorous = "1.0.9"
contour = "0.7.0"
csv = "1.2.0"
fs-err = "2.6.0"
geo = "0.23.0"
geojson = { version = "0.24.0", features = ["geo-types"] }
getrandom = "0.2.3"
instant = "0.1.7"
log = "0.4.14"
rand = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.61"
structopt = "0.3.23"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"

# There's a circular dependency between this repo (abstreet) and osm2streets,
# due to the 2 core dependency crates listed below. This patch is required to
# avoid Cargo from getting confused.
[patch."https://github.com/a-b-street/abstreet/"]
geom = { path = "geom" }
abstutil = { path = "abstutil" }

[patch.crates-io]
http-range-client = { git = "https://github.com/pka/http-range-client", rev = "e62f72ab3553a19f4166f73efd18b13b4c4164ec" }

# awaiting release to avoid duplicated geojson dep
geozero = { git = "https://github.com/georust/geozero", rev = "0c3d6209eea8aa37bd42e9e784b92f2087e7efb4" }

# To temporarily work on dependencies locally, uncomment this
# TODO Do not commit. Update each repo
#[patch."https://github.com/a-b-street/osm2streets"]
#streets_reader = { path = "/home/dabreegster/osm2streets/streets_reader" }
#osm2streets = { path = "/home/dabreegster/osm2streets/osm2streets" }
