[workspace]

resolver = "2"

members = [
  "abstio",
  "abstutil",
  "apps/*",
  "blockfinding",
  "cli",
  "collisions",
  "convert_osm",
  "headless",
  "importer",
  "kml",
  "map_gui",
  "map_model",
  "piggyback",
  "popdat",
  "popgetter",
  "raw_map",
  "sim",
  "synthpop",
  "tests",
  "traffic_seitan",
  "updater",
  "widgetry",
  "widgetry_demo",
]

# See https://doc.rust-lang.org/cargo/reference/profiles.html#overrides. This
# compiles all external dependencies as release mode, yielding great runtime
# speed, but only paying the cost of slow compilation once (since we don't
# update dependencies often).
[profile.dev.package."*"]
opt-level = 3

# Specify the versions for common dependencies just once here, instead of
# repeating in a bunch of crates
[workspace.dependencies]
anyhow = "1.0.75"
bincode = "1.3.1"
colorous = "1.0.9"
contour = "0.7.0"
csv = "1.2.0"
flate2 = "1.0.26"
fs-err = "2.9.0"
futures = { version = "0.3.27"}
futures-channel = { version = "0.3.29"}
geo = "0.27.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
geom = { git = "https://github.com/a-b-street/geom" }
getrandom = "0.2.11"
instant = "0.1.7"
log = "0.4.20"
rand = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
structopt = "0.3.23"
tokio = { version = "1.34.0", features=["full"] }
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"

# There's a circular dependency between this repo (abstreet) and osm2streets,
# due to the 2 core dependency crates listed below. This patch is required to
# avoid Cargo from getting confused.
[patch."https://github.com/a-b-street/abstreet/"]
abstutil = { path = "abstutil" }

[patch.crates-io]
http-range-client = { git = "https://github.com/pka/http-range-client", rev = "e62f72ab3553a19f4166f73efd18b13b4c4164ec" }

# To temporarily work on dependencies locally, uncomment this
# TODO Do not commit. Update each repo
#[patch."https://github.com/a-b-street/osm2streets"]
#streets_reader = { path = "/home/dabreegster/osm2streets/streets_reader" }
#osm2streets = { path = "/home/dabreegster/osm2streets/osm2streets" }
