[package]
name = "abstio"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
bincode = "1.3.1"
instant = "0.1.7"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = { version = "0.11.0", default-features=false, features=["rustls-tls"] }
serde = "1.0.123"
serde_json = "1.0.61"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = { version = "0.3.12"}
tokio = "1.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
include_dir = { git = "https://github.com/dabreegster/include_dir", branch = "union" }
web-sys = { version = "0.3.47", features=["Storage", "Window"] }
