[package]
name = "abstutil"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
env_logger = { version = "0.8.2" }
fs-err = { workspace = true }
instant = { workspace = true }
itertools = "0.10.0"
log = { workspace = true }
num_cpus = "1.13.0"
scoped_threadpool = "0.1.9"
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"
web-sys = { workspace = true, features=["Location", "Window"] }
