[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
csv = "1.1.4"
geo = "0.18.0"
geojson = { version = "0.22.0", features = ["geo-types"] }
geom = { path = "../geom" }
importer = { path = "../importer" }
log = "0.4.14"
map_model = { path = "../map_model" }
osmio = "0.4.0"
rand  = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.123"
sim = { path = "../sim" }
structopt = "0.3.23"
tokio = { version = "1.1.1", features = ["full"] }
