[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
csv = "1.1.4"
fs-err = { workspace = true }
geo = { workspace = true }
geom = { path = "../geom" }
importer = { path = "../importer" }
log = { workspace = true }
map_model = { path = "../map_model" }
osmio = "0.4.0"
rand  = "0.8.3"
rand_xorshift = { workspace = true }
serde = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
tokio = { version = "1.19.2", features = ["full"] }
