[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
convert_osm = { path = "../convert_osm" }
csv = { workspace = true }
fs-err = { workspace = true }
geo = { workspace = true }
geom = { path = "../geom" }
importer = { path = "../importer" }
log = { workspace = true }
map_model = { path = "../map_model" }
osmio = "0.7.0"
rand  = "0.8.3"
rand_xorshift = { workspace = true }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
tokio = { version = "1.19.2", features = ["full"] }
