[package]
name = "control"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]

[dependencies]
abstutil = { path = "../abstutil" }
dimensioned = { git = "https://github.com/paholg/dimensioned", rev = "0e1076ebfa5128d1ee544bdc9754c948987b6fe3", features = ["serde"] }
log = "0.4.5"
map_model = { path = "../map_model" }
serde = "1.0"
serde_derive = "1.0"
