[package]
name = "convert_osm"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
csv = "1.1.4"
fs-err = { workspace = true }
geom = { path = "../geom" }
kml = { path = "../kml" }
import_streets = { git = "https://github.com/a-b-street/osm2streets" }
log = { workspace = true }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
street_network = { git = "https://github.com/a-b-street/osm2streets" }
