[package]
name = "convert_osm"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
csv = { workspace = true }
fs-err = { workspace = true }
geom = { path = "../geom" }
kml = { path = "../kml" }
log = { workspace = true }
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
popgetter = { git = "https://github.com/dabreegster/popgetter/" }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
streets_reader = { git = "https://github.com/a-b-street/osm2streets" }
