[package]
name = "editor"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
counter = "0.4.3"
downcast = "0.9.2"
ezgui = { path = "../ezgui" }
generator = "0.6"
geo = "0.11.0"
geom = { path = "../geom" }
kml = { path = "../kml" }
lazy_static = "1.1.0"
log = "0.4.5"
map_model = { path = "../map_model" }
ordered-float = "1.0.1"
pretty_assertions = "0.5.1"
quick-xml = "0.13.1"
serde = "1.0.87"
serde_derive = "1.0.87"
sim = { path = "../sim" }
structopt = "0.2"
