[package]
name = "editor"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
counter = "0.4.3"
derive-new = "0.5.6"
downcast = "0.9.2"
ezgui = { path = "../ezgui" }
generator = "0.6"
geo = "0.11.0"
geom = { path = "../geom" }
kml = { path = "../kml" }
map_model = { path = "../map_model" }
multimap = "0.4.0"
ordered-float = "1.0.1"
pretty_assertions = "0.5.1"
quick-xml = "0.13.1"
# TODO Just for the DES model prototype
rand = "0.6.5"
rand_xorshift = "0.1.1"
rayon = "1.0"
serde = "1.0.87"
serde_derive = "1.0.87"
sim = { path = "../sim" }
structopt = "0.2"
