[package]
name = "editor"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
clipping = "0.1.1"
colorbrewer = "0.1.0"
counter = "0.4.3"
derive-new = "0.5.6"
downcast-rs = "1.0.4"
ezgui = { path = "../ezgui" }
geom = { path = "../geom" }
itertools = "0.8.0"
kml = { path = "../kml" }
map_model = { path = "../map_model" }
ordered-float = "1.0.1"
popdat = { path = "../popdat" }
pretty_assertions = "0.6.1"
rand = "0.6.5"
rand_xorshift = "0.1.1"
serde = "1.0.89"
serde_derive = "1.0.89"
sim = { path = "../sim" }
structopt = "0.2.15"

[build-dependencies]
walkdir = "2.2.7"
