[package]
name = "experiment"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["map_gui/native", "widgetry/native-backend"]

[dependencies]
abstutil = { path = "../abstutil" }
geom = { path = "../geom" }
kml = { path = "../kml" }
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
rand = "0.7.0"
rand_xorshift = "0.2.0"
widgetry = { path = "../widgetry" }
