[package]
name = "ezgui"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["glium-backend"]
glium-backend = ["glium", "glutin", "usvg/text"]
glow-backend = ["glow", "glutin", "usvg/text"]
wasm-backend = ["glow/stdweb", "instant/stdweb", "stdweb", "webgl_stdweb", "winit/stdweb"]
profiler = ["cpuprofiler"]

[dependencies]
abstutil = { path = "../abstutil" }
# backtrace = "0.3.40"
cpuprofiler = { version = "0.0.3", optional = true }
downcast-rs = "1.1.1"
geom = { path = "../geom" }
glium = { version = "0.26.0", optional = true }
glow = { version = "0.4.0", optional = true, default-features=false }
glutin = { git = "https://github.com/dabreegster/glutin", optional = true }
htmlescape = "0.3.1"
image = { version = "0.23.4", default-features = false, features=["png"] }
instant = "0.1.2"
lru = "0.4.3"
lyon = { git = "https://github.com/nical/lyon" }
serde = "1.0.110"
simsearch = "0.2.0"
stdweb  = { version = "0.4.20", optional = true }
stretch = "0.3.2"
textwrap = "0.11"
usvg = { git = "https://github.com/dabreegster/resvg", default-features=false }
webgl_stdweb = { version = "0.3", optional = true }
winit = "0.21.0"
