[package]
name = "fifteen_min"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["map_gui/native", "widgetry/native-backend"]

[dependencies]
abstutil = { path = "../abstutil" }
contour = "0.3.0"
geojson = "0.21.0"
geom = { path = "../geom" }
log = "0.4"
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
widgetry = { path = "../widgetry" }
