[package]
name = "fifteen_min"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["map_gui/native", "widgetry/native-backend"]
wasm = ["getrandom/js", "map_gui/wasm", "wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
contour = "0.4.0"
geojson = { version = "0.22.0", features = ["geo-types"] }
geom = { path = "../geom" }
getrandom = { version = "0.2.3", optional = true }
log = "0.4"
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { path = "../widgetry" }
