[package]
name = "game"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"
description = "A traffic simulation game based on OpenStreetMap"
repository = "https://github.com/dabreegster/abstreet"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["built", "widgetry/glow-backend", "reqwest"]
# Just a marker to jump straight into the OSM viewer
osm_viewer = []
wasm = ["console_log", "futures", "futures-channel", "js-sys", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "widgetry/wasm-backend"]
# Just a marker to not use localhost URLs
wasm_s3 = []

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
built = { version = "0.4.3", optional = true, features=["chrono"] }
chrono = "0.4.15"
colorous = "1.0.3"
console_log = { version = "0.1", optional = true }
contour = "0.2.0"
downcast-rs = "1.2.0"
enumset = "1.0.1"
flate2 = "1.0.18"
futures = { version = "0.3.5", optional = true }
futures-channel = { version = "0.3.6", optional = true }
geojson = "0.19.0"
geom = { path = "../geom" }
instant = "0.1.7"
js-sys = { version = "0.3.45", optional = true }
kml = { path = "../kml" }
log = "0.4.11"
lttb = "0.2.0"
maplit = "1.0.2"
map_model = { path = "../map_model" }
petname = "1.0.12"
rand = "0.7.0"
rand_xorshift = "0.2.0"
reqwest = { version = "0.10.8", optional = true, default-features=false, features=["blocking", "rustls-tls"] }
serde = "1.0.116"
serde_json = "1.0.57"
svg_face = "0.1.2"
sim = { path = "../sim" }
wasm-bindgen = { version = "0.2.68", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
webbrowser = "0.5.5"
widgetry = { path = "../widgetry", default-features=false }
xmltree = "0.10.1"

[build-dependencies]
built = "0.4.2"
walkdir = "2.2.7"

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
