[package]
name = "game"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"
description = "A traffic simulation game based on OpenStreetMap"
repository = "https://github.com/a-b-street/abstreet"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["built", "map_gui/native", "widgetry/native-backend"]
wasm = ["getrandom/js", "map_gui/wasm", "wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
built = { version = "0.4.3", optional = true, features=["chrono"] }
chrono = "0.4.15"
collisions = { path = "../collisions" }
colorous = "1.0.3"
contour = "0.3.0"
csv = "1.1.4"
downcast-rs = "1.2.0"
enumset = "1.0.3"
futures-channel = { version = "0.3.12"}
geojson = "0.22"
geom = { path = "../geom" }
getrandom = { version = "0.2.2", optional = true }
instant = "0.1.7"
kml = { path = "../kml" }
lazy_static = "1.4.0"
log = "0.4.14"
lttb = "0.2.0"
maplit = "1.0.2"
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
petname = "1.1.0"
popdat = { path = "../popdat" }
rand = "0.8.3"
rand_xorshift = "0.3.0"
rfd = "0.2.2"
serde = "1.0.123"
serde_json = "1.0.61"
svg_face = "0.1.3"
sim = { path = "../sim" }
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { path = "../widgetry" }

[build-dependencies]
built = "0.4.2"
