[package]
name = "geom"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
earcutr = "0.1.1"
geo = "0.18"
geo-booleanop = "0.3.2"
geojson = { version = "0.22.0", features = ["geo-types"] }
histogram = "0.6.9"
instant = "0.1.7"
ordered-float = { version = "2.4.0", features=["serde"] }
polylabel = "2.4"
serde = "1.0.123"
