[package]
name = "geom"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
earcutr = "0.4.3"
fs-err = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
histogram = "0.6.9"
instant = { workspace = true }
ordered-float = { version = "3.7.0", features=["serde"] }
polylabel = "2.5.0"
rstar = "0.11.0"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }
