[package]
name = "halloween"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
ezgui = { path = "../ezgui" }
geom = { path = "../geom" }
map_model = { path = "../map_model" }
structopt = "0.2.15"
viewer = { path = "../viewer" }
