[package]
name = "headless"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
geojson = { version = "0.22.0", features = ["geo-types"] }
geom = { path = "../geom" }
hyper = { version = "0.14.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.14"
map_model = { path = "../map_model" }
rand = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.61"
sim = { path = "../sim" }
tokio = { version = "1.1.1", features = ["full"] }
url = "2.2.0"
