[package]
name = "headless"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
geojson = { workspace = true }
geom = { path = "../geom" }
hyper = { version = "0.14.19", features = ["full"] }
lazy_static = "1.4.0"
log = { workspace = true }
map_model = { path = "../map_model" }
rand = { workspace = true }
rand_xorshift = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
tokio = { version = "1.20.3", features = ["full"] }
url = "2.2.0"
