[package]
name = "headless"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
geojson = { workspace = true }
geom = { path = "../geom" }
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
log = { workspace = true }
map_model = { path = "../map_model" }
rand = { workspace = true }
rand_xorshift = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
tokio = { workspace = true }
url = "2.3.1"
