[package]
name = "importer"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = []
scenarios = ["gdal"]

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
collisions = { path = "../collisions" }
convert_osm = { path = "../convert_osm" }
csv = "1.1.4"
geo = "0.18.0"
geom = { path = "../geom" }
gdal = { version = "0.8.0", optional = true }
kml = { path = "../kml" }
log = "0.4.14"
map_model = { path = "../map_model" }
popdat = { path = "../popdat" }
rand  = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.61"
sim = { path = "../sim" }

# These are all transitive dependencies, specified here only to enable certain
# features. This lets this crate share dependencies with game and most of the
# other binary crates. See
# https://www.reddit.com/r/rust/comments/nvd6y7/common_crates_in_cargo_workspace_recompiled_due/.
hashbrown = "0.9.1"
libc = { version = "0.2.94", features=["extra_traits"] }
num-integer = { version = "0.1.44", features=["i128", "std"] }
