[package]
name = "importer"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[features]
default = []
scenarios = ["gdal"]

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
collisions = { path = "../collisions" }
convert_osm = { path = "../convert_osm" }
csv = "1.1.4"
geo = { workspace = true }
geojson = { workspace = true }
geom = { path = "../geom" }
gdal = { version = "0.8.0", optional = true, features = ["bindgen"] }
kml = { path = "../kml" }
log = { workspace = true }
map_model = { path = "../map_model" }
popdat = { path = "../popdat" }
rand  = "0.8.3"
rand_xorshift = { workspace = true }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
serde_json = { workspace = true }
sim = { path = "../sim" }
street_network = { git = "https://github.com/a-b-street/osm2streets" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }

# These are all transitive dependencies, specified here only to enable certain
# features. This lets this crate share dependencies with game and most of the
# other binary crates. See
# https://www.reddit.com/r/rust/comments/nvd6y7/common_crates_in_cargo_workspace_recompiled_due/.
hashbrown = "0.9.1"
libc = { version = "0.2.94", features=["extra_traits"] }
num-integer = { version = "0.1.44", features=["i128", "std"] }
fs-err = { workspace = true }
