[package]
name = "importer"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[features]
default = []
scenarios = ["gdal"]

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
collisions = { path = "../collisions" }
convert_osm = { path = "../convert_osm" }
csv = { workspace = true }
fs-err = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
geom = { path = "../geom" }
gdal = { version = "0.14.0", optional = true, features = ["bindgen"] }
kml = { path = "../kml" }
log = { workspace = true }
map_model = { path = "../map_model" }
popdat = { path = "../popdat" }
rand  = "0.8.3"
rand_xorshift = { workspace = true }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
serde_json = { workspace = true }
sim = { path = "../sim" }
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
