[package]
name = "kml"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
csv = "1.1.4"
geom = { path = "../geom" }
log = "0.4.14"
roxmltree = { version = "0.14.0", features=["std"] }
serde = "1.0.123"
