[package]
name = "kml"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
csv = "1.1.4"
geom = { path = "../geom" }
log = { workspace = true }
roxmltree = { version = "0.15.1", features=["std"] }
serde = { workspace = true }
