[package]
name = "kml"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
csv = { workspace = true }
geom = { path = "../geom" }
log = { workspace = true }
roxmltree = { version = "0.18.0", features=["std"] }
serde = { workspace = true }
